[package]
name = "uRustOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
nb = "1.0.0"
panic-halt = "0.2.0"

# equivalent to stm32f1xx-hal = { version = "0.9.0", ["rt", "stm32f103", "medium"] }
[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]
